[gd_scene load_steps=2 format=2]

[ext_resource path="res://PromoteMenu.gd" type="Script" id=1]

[node name="PromoteMenu" type="VBoxContainer"]
margin_right = 76.0
margin_bottom = 110.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_right = 76.0
margin_bottom = 14.0
text = "Promote to:"

[node name="ColorRect" type="ColorRect" parent="Label"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0431373, 0, 0.564706, 1 )

[node name="PromoteKnight" type="Button" parent="."]
margin_top = 18.0
margin_right = 76.0
margin_bottom = 38.0
text = "Knight"

[node name="PromoteRook" type="Button" parent="."]
margin_top = 42.0
margin_right = 76.0
margin_bottom = 62.0
text = "Rook"

[node name="PromoteBishop" type="Button" parent="."]
margin_top = 66.0
margin_right = 76.0
margin_bottom = 86.0
text = "Bishop"

[node name="PromoteQueen" type="Button" parent="."]
margin_top = 90.0
margin_right = 76.0
margin_bottom = 110.0
text = "Queen"

[connection signal="pressed" from="PromoteKnight" to="." method="_on_PromoteKnight_pressed"]
[connection signal="pressed" from="PromoteRook" to="." method="_on_PromoteRook_pressed"]
[connection signal="pressed" from="PromoteBishop" to="." method="_on_PromoteBishop_pressed"]
[connection signal="pressed" from="PromoteQueen" to="." method="_on_PromoteQueen_pressed"]
